# varlock_ui

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  VARLOCK_MIGRATION_PRODUCTION_PLAN.md  implementation_plan.md  index.html  package-lock.json  package.json  varlock_gui_main_view.html  varlock_ui_separation_architecture.html  vite.config.ts
docs/: README.md  audit  planning
docs/architecture/: ARCHITECTURE.md  NewArc.md  security_plan_review.html  varlock_interface_contract.html
docs/design/: devlaunch_mature_dashboard.html  varlock_add_project_migrate.html  varlock_terminal_panel.html
docs/plans/: IMPLEMENTATION_PLAN_REMAINING.md
docs/releases/: v0.2.0_walkthrough.md  v0.2.0_walkthrough_deatils.md
src/: App.tsx
src-tauri/: Cargo.toml  env.d.ts  rewrite_python.py  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cli_entry.rs  lib.rs  main.rs
src-tauri/src/commands/: ai_context.rs  discovery.rs  filesystem.rs  mod.rs  process.rs  project.rs  python_env.rs  terminal_attach.rs  varlock.rs  vault.rs
src-tauri/src/discovery/: commands.rs  detector.rs  python.rs
src-tauri/src/launcher/: cache.rs  config.rs  driver.rs  fingerprint.rs  mod.rs  node.rs  probe.rs  python.rs  shell.rs  types.rs
src-tauri/src/state/: app_state.rs  mod.rs  process_registry.rs  process_state.rs
src-tauri/src/varlock/: cli.rs  detect.rs  merge.rs  migration.rs  mod.rs  schema.rs  schema_types.rs  types.rs
src-tauri/src/vault/: audit.rs  crypto.rs  mod.rs  resolver.rs  vault_db.rs
src/components/commands/: CommandCard.tsx  CommandGrid.tsx  EnvSelectorBar.tsx  PythonEnvPanel.tsx
src/components/layout/: AppLayout.tsx  (+2 more)
src/hooks/: useFileWatcher.ts  useResizeObserver.ts  useTerminalStream.ts  useVarlockCommand.ts
src/lib/: buildEditableVariable.ts  commands.ts  constants.ts  envFile.ts  schemaParser.ts  types.ts  utils.test.ts  utils.ts
src/stores/: commandStore.ts  environmentStore.ts  projectStore.ts  scanStore.ts  terminalStore.ts  vaultStore.ts
src/styles/: globals.css
(+25 files in other folders)
