[package]
name = "varlock-ui"
version = "0.1.0"
description = "A Tauri desktop application for the Varlock CLI"
authors = ["Varlock Team"]
edition = "2021"

[lib]
name = "varlock_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
notify = "7"
notify-debouncer-mini = "0.5"
dirs = "6"
log = "0.4"
