[package]
name = "devpad"
version = "0.3.0"
description = "Devpad: A secure desktop application and GUI for managing environment variables"
authors = ["Varlock Team"]
edition = "2021"

[lib]
name = "varlock_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
notify = "7"
notify-debouncer-mini = "0.5"
dirs = "6"
log = "0.4"
thiserror = "2"

# Vault crypto
chacha20poly1305 = "0.10"
argon2 = "0.5"
hkdf = "0.12"
sha2 = "0.10"
blake3 = "1"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }

# Vault storage
rusqlite = { version = "0.31", features = ["bundled"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
shell-words = "1"
toml = "0.8"
which = "7"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Threading", "Win32_Foundation"] }
